<resources>
    <string name="app_name">pablo</string>

    <string name="Sign"><u>Create New Account</u></string>
    <string name="text">
       Before It Was Destroyed, This Mosque Was One Of The Oldest Standing Mosques In The World. It Served
        As A Rest Stop For Travelers, Arab Caravans On Trade Routes Through Syria And Pilgrims Traveling To Mecca.
        The Travelers Used The Central Courtyard Of The Mosque As A Marketplace As Well As A Place To Sleep. </string>


    <string name="mosque_details">
    It is a long established fact that a reader will be distracted by the readable content of a page when
        looking at its layout.The point of using Lorem Ipsum is that it has a more-or-less normal distribution
        of letters, as opposed .</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="search">search</string>
    <string name="click_here">Click here!</string>
    <string name="more_details">More Details</string>
    <string name="bt_supported_card_types_description">bt_supported_card_types_description</string>
    <string name="booking_info">booking info</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="night">/Night</string>
    <string name="_0">0</string>
    <string name="rooms_available">Rooms Available</string>
    <string name="check_in">Check In</string>
    <string name="add_date">Add Date</string>
    <string name="total_amount">Total Amount</string>
    <string name="check_out">Check Out</string>
    <string name="_100">100</string>
    <string name="rooms_count">Rooms Count</string>
    <string name="nights">Nights</string>
    <string name="_20">20</string>
    <string name="offer">Offer</string>
    <string name="book_now">Book Now</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="delete_all">Delete All</string>
    <string name="total_price">Total Price :</string>
    <string name="cart">Cart</string>
    <string name="pay_by_card">pay by card</string>
    <string name="churches_name">Churches Name</string>
    <string name="location">Location</string>
    <string name="details">Details</string>
    <string name="_5000_visited">5000+ Visited</string>
    <string name="_3_7_km">3.7 Km</string>
    <string name="available_times">Available Times</string>
    <string name="saturday_thursday">Saturday - Thursday</string>
    <string name="_08_00_am_3_00_pm">08:00 Am - 3:00 Pm</string>
    <string name="rooms_order">Rooms Order</string>
    <string name="check_in_date">Check In Date :</string>
    <string name="total_nights">Total Nights:</string>
    <string name="room_count">Room Count:</string>
    <string name="room_price_pernight">Room Price PerNight:</string>
    <string name="room_savings">Room savings:</string>
    <string name="room_has_offer">Room Has Offer:</string>
    <string name="check_out_date">Check Out Date :</string>
    <string name="_13_03_2002">13-03-2002</string>
    <string name="room_name">Room Name</string>
    <string name="sweet">sweet</string>
    <string name="hotel_rate_is">Hotel Rate is</string>
    <string name="it_is_a_long_established_fact_that_a_reader_will_be_distracted_by_the_readable_content_of_a_page_when_looking_at_its_layout_the_point_of_using_lorem_ipsum_is_that_it_has_a_more_or_less_normal_distribution_of_letters_as_opposed">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed</string>
    <string name="amenities">Amenities</string>
    <string name="select_room">Select Room</string>
    <string name="pablo">Pablo</string>
    <string name="continue_with_your_email">Continue with your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="or">OR</string>
    <string name="welcome_to">Welcome to</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="login">Login</string>
    <string name="get_started">Get Started</string>
    <string name="mosque_name">Mosque Name</string>
    <string name="payment_amount">Payment amount</string>
    <string name="name_of_card">name of card</string>
    <string name="card_number">card number</string>
    <string name="expiry_date">expiry date</string>
    <string name="cvv">CVV</string>
    <string name="pay_now">pay now</string>
    <string name="rooms">Rooms</string>
    <string name="add_you_information">Add You Information</string>
    <string name="aya_enshasy">Aya Enshasy</string>
    <string name="aya123_gmail_com">aya123@gmail.com</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="pass">× × × × × × × × ×</string>
    <string name="gaza_city">Gaza City</string>
    <string name="address">Address</string>
    <string name="discover">Discover</string>
    <string name="popular">Popular</string>
    <string name="mosque">Mosque</string>
    <string name="my_order">My Order</string>
    <string name="_20_30_2022_20_20_2022">20/30/2022 - 20/20/2022</string>
    <string name="_8_00am_9_00pm">8:00am - 9:00pm</string>
    <string name="more_detailss"><![CDATA[More Details --->]]></string>
    <string name="may_20_2021_may_20_2021">May 20, 2021 - May 20, 2021</string>
    <string name="room">Room</string>
    <string name="up_to">Up to</string>
    <string name="person">person</string>
    <string name="date">Date</string>
    <string name="item_count">Item Count</string>
    <string name="full_name">Full Name</string>
    <string name="username_gmail_com">username@gmail.com</string>
    <string name="register">register</string>
    <string name="hotels">Hotels</string>

</resources>