<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card"
    android:padding="@dimen/_16sdp"
    android:elevation="@dimen/_1sdp"
    android:layout_marginRight="@dimen/_10sdp"
    android:layout_marginLeft="@dimen/_10sdp"
    android:layout_marginBottom="@dimen/_16sdp"
    tools:context=".details_activities.HotelOrdersDetails">


    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/check_in_date"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/room_name"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/total_nights"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/room_count"
        app:layout_constraintTop_toBottomOf="@+id/checkout" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/room_count"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView34" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/room_price_pernight"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/room_savings"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/room_offer"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/room_has_offer"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/check_out_date"
        android:textColor="@color/purple_500"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/checkin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/_13_03_2002"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/room_name" />

    <TextView
        android:id="@+id/room_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:text="@string/sweet"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/checkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/_13_03_2002"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/checkin" />

    <TextView
        android:id="@+id/room_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/amenities"
        android:fontFamily="@font/montserrat"
        android:paddingStart="@dimen/_8sdp"
        android:paddingTop="@dimen/_3sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/textView36"
        app:layout_constraintTop_toBottomOf="@+id/checkout" />

    <TextView
        android:id="@+id/price_per_nights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/amenitiespark"
        android:fontFamily="@font/montserrat"
        android:paddingStart="@dimen/_8sdp"
        android:paddingTop="@dimen/_3sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/textView38"
        app:layout_constraintTop_toBottomOf="@+id/textView32" />

    <TextView
        android:id="@+id/room_offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/amenitieswifi"
        android:fontFamily="@font/montserrat"
        android:paddingStart="@dimen/_8sdp"
        android:paddingTop="@dimen/_3sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/textView45"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <TextView
        android:id="@+id/room_serving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/backgroundshape"
        android:fontFamily="@font/montserrat"
        android:paddingStart="@dimen/_8sdp"
        android:paddingTop="@dimen/_3sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView40"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <TextView
        android:id="@+id/total_nights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/ac"
        android:fontFamily="@font/montserrat"
        android:paddingStart="@dimen/_8sdp"
        android:paddingTop="@dimen/_3sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingBottom="@dimen/_3sdp"
        android:text="@string/_0"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/textView32"
        app:layout_constraintTop_toBottomOf="@+id/checkout" />


</androidx.constraintlayout.widget.ConstraintLayout>