<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraint"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:clipToPadding="false"
    android:paddingRight="@dimen/_16sdp"
    android:layout_height="wrap_content"
    android:elevation="@dimen/_15sdp"
    >

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/Mosque_imageView"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_220sdp"
        android:scaleType="fitXY"
        android:background="#E6E6E6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/roundedImageViewPopularMosques"
        />




    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/mosque_name"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="192dp"
        android:background="#B5B5B5"
        android:fontFamily="@font/montserrat"
        android:text="@string/mosque_name"
        android:textColor="#00FFFFFF"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/Mosque_imageView"
        app:layout_constraintTop_toTopOf="@+id/Mosque_imageView" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/location_pin"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:background="#B5B5B5"
        android:fontFamily="@font/montserrat"
        android:text="@string/location"
        android:textColor="#00FFFFFF"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mosque_name" />

    <TextView
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="#B5B5B5"
        android:fontFamily="@font/montserrat"
        android:text="@string/more_detailss"
        android:textColor="#00FFFFFF"
        android:textSize="@dimen/_8ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Mosque_imageView"
        app:layout_constraintTop_toBottomOf="@+id/location_pin"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>