<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:elevation="6dp"
    android:layout_marginBottom="15dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_12sdp"
    android:background="@drawable/hotel_num"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="170dp"
        android:layout_height="@dimen/_148sdp"
        android:id="@+id/cardv"
        android:background="#F4F4F4"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/cardv"
            tools:ignore="NotSibling" />

        <ImageView
            android:id="@+id/image1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="@+id/image"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/hotel_shape"
            />

        <!--        <View-->
        <!--            android:id="@+id/view3"-->
        <!--            android:layout_width="60dp"-->
        <!--            android:layout_height="25dp"-->
        <!--            android:layout_marginTop="70dp"-->
        <!--            android:background="@drawable/logo_white"-->
        <!--            app:layout_constraintEnd_toEndOf="@+id/image1"-->
        <!--            app:layout_constraintHorizontal_bias="0.071"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/image1" />-->

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:background="#B5B5B5"

            android:fontFamily="@font/montserrat"
            android:text="@string/hotel_name"
            android:textColor="#000E4C75"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:background="#B5B5B5"

            android:fontFamily="@font/montserrat_bold"
            android:text="@string/available_times"
            android:textColor="#00C3D61B"
            android:textSize="8sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/available_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:background="#B5B5B5"

            android:text="@string/_8_00am_9_00pm"
            android:textColor="#00251414"
            android:textSize="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="#B5B5B5"
            android:text="@string/location"
            android:textColor="#00000000"
            android:textSize="9sp"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/available_time" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>